overlays/kimawesome/applications/tooling/faulty-thing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: faulty-thingy-route
spec:
  parentRefs:
    - name: https-gateway
      namespace: kube-system
      sectionName: https-faulty-thingy
  hostnames:
    - "faulty-thingy.kim.tec.br"       # Specific hostname for this app
  rules:
    - name: root
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: faulty-thingy
          port: 80
